<resources>
    <string name="app_name">APZ_android</string>
    <string name="baseUrl" translatable="false">https://apzbackend.azurewebsites.net/api</string>
    <string name="chatConnectionUrl" translatable="false">https://apzbackend.azurewebsites.net</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="LogIn">Log In</string>
    <string name="Language">Language</string>
    <string name="Add">Add</string>
    <string name="Edit">Edit</string>
    <string name="Remove">Remove</string>
    <string name="Location">Location</string>
    <string name="Profile">Profile</string>
    <string name="Sex">Sex</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="EnterEmail">Enter email</string>
    <string name="EnterName">Enter name</string>
    <string name="EnterSurname">Enter surname</string>
    <string name="Id">ID</string>
    <string name="View">View</string>
    <string name="Working">Working</string>
    <string name="NewInstitution">New institution</string>
    <string name="ViewInstitution">View institution</string>
    <string name="CurrentBalance">Current Balance</string>
    <string name="TopUpBalance">Top up balance</string>
    <string name="Amount">Amount</string>
    <string name="TransactionHistory">Transaction history</string>
    <string name="Employees">Employees</string>
    <string name="ViewEmployees">View Employees</string>
    <string name="AddAnEmployee">Add an employee</string>
    <string name="NotWorking">Not Working</string>
    <string name="Role">Role</string>
    <string name="UserId">User ID</string>
    <string name="Dismiss">Dismiss</string>
    <string name="Reinstate">Reinstate</string>
    <string name="ChatCode">Chat code</string>
    <string name="MyChats">My chats</string>
    <string name="InstitutionName">Institution name</string>
    <string name="EnterInstitution">Enter Institution name</string>
    <string name="EnterLocation">Enter location</string>
    <string name="Confirm">Confirm</string>
    <string name="EnterPassword">Enter password</string>
    <string name="RepeatPassword">Repeat password</string>
    <string name="Feature">Feature</string>
    <string name="EnterUserId">Enter User ID</string>
    <string name="EnterFeature">Enter feature</string>
    <string name="LogOut">LogOut</string>
    <string name="InterfaceLanguage">Interface language</string>
    <string name="MyInstitutions">My institutions</string>
    <string name="EnterAmount">Enter amount</string>
    <string name="ExportImport">Export / Import</string>
    <string name="Export">Export</string>
    <string name="Home">Home</string>
    <string name="AllInstitutions">All institutions</string>
    <string name="SignUp">SignUp</string>
    <string name="SignIn">SignIn</string>
    <string name="admin">Admin</string>
    <string name="employee">Employee</string>
    <string name="InstitutionEmployeeId">Institution-Employee ID</string>
    <string name="InstitutionId">Institution ID</string>
    <string name="UserName">User Name</string>
    <string name="UserSurname">User Surname</string>
    <string name="IsWorking">Is Working</string>
    <string name="TransactionId">Transaction ID</string>
    <string name="Date">Date</string>
    <string name="MoneyTransaction">Money Transaction</string>
    <string name="Remainder">Remainder</string>
    <string name="Адміністратор">admin</string>
    <string name="Працівник">employee</string>
    <string name="Admin">admin</string>
    <string name="Employee">employee</string>
    <string name="Action">Action</string>
    <string name="DoubleСlickOnTheLine">Double click on the line</string>
    <string name="GoToChat">Go to chat</string>
    <string name="EnterChatCode">Enter chat code</string>
    <string name="СannotBeReleased">Сannot be released</string>
    <string name="InstitutionProfile">Institution profile</string>
    <string name="NotAllFieldsAreFilledInCorrectly">Not all fields are filled in correctly</string>
    <string name="Send">Send</string>
    <string name="ReplenishmentOfTheBalance">Replenishment of the balance</string>
    <string name="AlreadyHaveAnAccount">Already have an account? Log in.</string>
    <string name="NoAccountRegister">No account? Register</string>
    <string name="IncorrectInput">Incorrect input</string>
    <string name="Empty">Field empty</string>
</resources>